styles/dark-theme.css
body .dark-theme {
  /* Principal Colors */
  --color-accent: #fafafa;
  --color-accent-hover: #d3d3d3;
  --color-neutral-dark-100: #1c1818;
  --color-neutral-dark-200: #2e2e2e;
  --color-neutral-dark-300: #331919;
  --color-neutral-green: #00a86b;
  --color-neutral-grey-100: #87847f;
  --color-neutral-grey-200: #9a9999;
  --color-neutral-grey-300: #e2e2e2;
  --color-neutral-light-100: #eaeaea;
  --color-neutral-light-200: #fff;
  --color-star: #af6b62;
  --color-star-light: #bf7e74;
  --color-star-light-hover: #dea1a5;

  /* Second Tier Colors */
  --color-background: var(--color-neutral-dark-100);
  --color-background-variant: var(--color-neutral-dark-300);
  --color-border: var(--color-neutral-light-100);
  --color-border-variant: var(--color-neutral-light-100);
  --color-headline: var(--color-star);
  --color-headline-variant: var(--color-neutral-light-100);
  --color-highlighted: var(--color-neutral-light-100);
  --color-highlighted-variant: var(--color-neutral-grey-100);
  --color-icon: var(--color-neutral-dark-100);
  --color-icon-variant: var(--color-neutral-light-100);
  --color-icon-background: var(--color-neutral-grey-100);
  --color-link: var(--color-accent);
  --color-link-hover: var(--color-accent-hover);
  --color-link-variant: var(--color-star-light);
  --color-link-variant-hover: var(--color-star-light-hover);
  --color-switch: var(--color-neutral-grey-300);
  --color-switch-border: var(--color-neutral-grey-300);
  --color-switch-off: var(--color-neutral-light-100);
  --color-switch-on: var(--color-neutral-grey-200);
  --color-text: var(--color-neutral-light-100);
  --color-text-variant: var(--color-neutral-light-200);
  --color-text-small: var(--color-neutral-grey-100);
  --color-text-small-variant: var(--color-neutral-light-200);
  --color-text-star: var(--color-star-light);
}

